--- a/posts/nfl-game-prediction/index.qmd
+++ b/posts/nfl-game-prediction/index.qmd
@@ -372,15 +372,13 @@ predict(final_model,new_data = test_data)
 # Align predictions to test dataset
 predicted_df = augment(final_model,test_data)
 
-
-
 predicted_df
 ```
 
 
 ```{r}
 predicted_df%>% 
-  roc_curve(truth = home_win, .pred_1) %>% 
+  roc_curve(truth = home_win, .pred_0) %>% 
   autoplot()
 
 
@@ -394,7 +392,8 @@ acc_by_week
 
 acc_by_week %>%
   ggplot(aes(x = week, y = acc)) +
-  geom_col()
+  geom_col() + 
+  geom_smooth()
 
 game_aug %>%
   group_by(season) %>%
@@ -404,56 +403,10 @@ acc_by_season
 
 acc_by_season %>%
   ggplot(aes(x = season, y = acc)) +
-  geom_col()
+  geom_col() 
 ```
 
 Looks like predictions get slightly stronger throughout season. Sample size is small for end of season.
-
-Ooof! this is a terrible fit. Let's check the model fit.
-
-```{r}
-game_aug %>% 
-  roc_auc(truth = home_win, .pred_TRUE)
-```
-
-Let's create a new model recipe to check how other models do
-
-```{r}
-rec_moneyline = recipe(formula = home_win ~
-                      game_id +home_moneyline,
-                 data = train_data) %>%
-  #create ID role (do not remove) game ID
-  update_role(game_id, new_role = "ID")
-
-# Update workflow
-game_pred_wflow %>%
-  update_recipe(rec_moneyline) -> ml_flow
-
-prep(rec_moneyline,training = train_data)
-
-ml_fit <- 
-  ml_flow %>% 
-  fit(data = train_data)
-
-extract_fit_parsnip(ml_fit) %>%
-  tidy() 
-
-
-# Make predictions
-predict(ml_fit,new_data = test_data)
-
-# Augment dataframe with preds
-ml_aug = augment(ml_fit,test_data)
-
-# Plot ROC
-ml_aug %>% 
-  roc_curve(truth = home_win, .pred_TRUE) %>% 
-  autoplot()
-
-ml_aug %>% 
-  roc_auc(truth = home_win, .pred_TRUE)
-```
-
 
 
 
